--- a/config/rubocop/rubocop.yml
+++ b/config/rubocop/rubocop.yml
@@ -150,7 +150,7 @@ Metrics/PerceivedComplexity:
 #################### Naming ################################
 
 # has_ から始まるメソッドは許可する
-Naming/PredicateName:
+Naming/PredicatePrefix:
   ForbiddenPrefixes:
     - "is_"
     - "have_"
