--- a/config/database.yml
+++ b/config/database.yml
@@ -60,8 +60,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: wonderful_editor_test
-
+  username: postgres
+  password: postgres
+  host: localhost
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
