--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,4 +7,8 @@ inherit_from:
   - config/rubocop/rspec.yml
 
 AllCops:
-  TargetRubyVersion: 2.7  
+  TargetRubyVersion: 2.7
+
+Style/SymbolProc:
+  Exclude:
+    - 'db/migrate/*'
